src/snapshots/templates__parser__test__parse_dot_access.snap
---
source: src/parser.rs
assertion_line: 317
expression: "Hello{% if user.is_admin %} Admin{% endif %}"

---
[
    Text(
        "Hello",
    ),
    If(
        "user.is_admin",
        [
            Text(
                " Admin",
            ),
        ],
        [],
    ),
]
