src/snapshots/templates__parser__test__parse_empty_if_statement.snap
---
source: src/parser.rs
assertion_line: 283
expression: "Hello {% if is_user %}{% endif %}"

---
[
    Text(
        "Hello ",
    ),
    If(
        "is_user",
        [],
        [],
    ),
]
