src/snapshots/templates__parser__test__parse_for_as_loop.snap
---
source: src/parser.rs
assertion_line: 310
expression: "Hello,{% for item as Item in list %} to {{ item }} and {% endfor %} everyone else"

---
[
    Text(
        "Hello,",
    ),
    For(
        "item",
        Some(
            "Item",
        ),
        "list",
        [
            Text(
                " to ",
            ),
            Identifier(
                "item",
            ),
            Text(
                " and ",
            ),
        ],
    ),
    Text(
        " everyone else",
    ),
]
