src/snapshots/templates__parser__test__parse_for_loop.snap
---
source: src/parser.rs
assertion_line: 305
expression: "Hello,{% for item in list %} to {{ item }} and {% endfor %} everyone else"

---
[
    Text(
        "Hello,",
    ),
    For(
        "item",
        None,
        "list",
        [
            Text(
                " to ",
            ),
            Identifier(
                "item",
            ),
            Text(
                " and ",
            ),
        ],
    ),
    Text(
        " everyone else",
    ),
]
