src/snapshots/templates__parser__test__parse_for_loop_with_single_identifier.snap
---
source: src/parser.rs
assertion_line: 300
expression: "Hello {% for item in list %}{{ item }}{% endfor %}"

---
[
    Text(
        "Hello ",
    ),
    For(
        "item",
        None,
        "list",
        [
            Identifier(
                "item",
            ),
        ],
    ),
]
