src/snapshots/templates__parser__test__parse_gleam_expression.snap
---
source: src/parser.rs
expression: "Hello {{ string.uppercase(name) }}, good to meet you"
---
[
    Text(
        "Hello ",
    ),
    Identifier(
        "string.uppercase(name)",
    ),
    Text(
        ", good to meet you",
    ),
]
