src/snapshots/templates__parser__test__parse_identifier.snap
---
source: src/parser.rs
assertion_line: 273
expression: "Hello {{ name }}, good to meet you"

---
[
    Text(
        "Hello ",
    ),
    Identifier(
        "name",
    ),
    Text(
        ", good to meet you",
    ),
]
