src/snapshots/templates__parser__test__parse_if_else_statement.snap
---
source: src/parser.rs
assertion_line: 288
expression: "Hello {% if is_user %}User{% else %}Unknown{% endif %}"

---
[
    Text(
        "Hello ",
    ),
    If(
        "is_user",
        [
            Text(
                "User",
            ),
        ],
        [
            Text(
                "Unknown",
            ),
        ],
    ),
]
