src/snapshots/templates__parser__test__parse_if_statement.snap
---
source: src/parser.rs
assertion_line: 278
expression: "Hello {% if is_user %}User{% endif %}"

---
[
    Text(
        "Hello ",
    ),
    If(
        "is_user",
        [
            Text(
                "User",
            ),
        ],
        [],
    ),
]
