src/snapshots/templates__parser__test__parse_import.snap
---
source: src/parser.rs
assertion_line: 322
expression: "{> import user.{User}\n{{ name }}"

---
[
    Import(
        "user.{User}",
    ),
    Identifier(
        "name",
    ),
]
